--- a/3. Обектно-ориентирано програмиране (ООП)/Homework/1. Defining Classes Part I/01. GSM/01. MobilePhone.csproj
+++ b/3. Обектно-ориентирано програмиране (ООП)/Homework/1. Defining Classes Part I/01. GSM/01. MobilePhone.csproj
@@ -46,6 +46,7 @@
     <Compile Include="GSM.cs" />
     <Compile Include="GSMTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Test.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
