update homework 1 OOP

--- a/3. Обектно-ориентирано програмиране (ООП)/Homework/1. Defining Classes Part I/01. GSM/01. MobilePhone.csproj
+++ b/3. Обектно-ориентирано програмиране (ООП)/Homework/1. Defining Classes Part I/01. GSM/01. MobilePhone.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Battery.cs" />
+    <Compile Include="Call.cs" />
+    <Compile Include="CallHistoryTest.cs" />
     <Compile Include="Display.cs" />
     <Compile Include="GSM.cs" />
     <Compile Include="GSMTest.cs" />
