--- a/7. High-Quality Code/Homework/04. Using Variables, Data, Expressions and Constants/02. Code Refactoring/02. Code Refactoring.csproj
+++ b/7. High-Quality Code/Homework/04. Using Variables, Data, Expressions and Constants/02. Code Refactoring/02. Code Refactoring.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8975022D-D6AE-4E44-9E4B-E830817366EA}</ProjectGuid>
+    <ProjectGuid>{5B8515E0-17CD-4A4B-AA93-3894DF3BEA69}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SizeCodeRefactoring</RootNamespace>
-    <AssemblyName>_01.Code_Refactoring</AssemblyName>
+    <RootNamespace>_02.Code_Refactoring</RootNamespace>
+    <AssemblyName>_02.Code_Refactoring</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,9 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SizeDemo.cs" />
+    <Compile Include="CodeRefatoringDemo.cs" />
+    <Compile Include="Print.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Size.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
