High-Quality Code hw 6 - Methods

--- a/7. High-Quality Code/Homework/06. High-Quality Methods/Methods/Methods.csproj
+++ b/7. High-Quality Code/Homework/06. High-Quality Methods/Methods/Methods.csproj
@@ -43,7 +43,8 @@
   <ItemGroup>
     <Compile Include="Methods.cs" />
     <Compile Include="Student.cs" />
-    <Compile Include="Utility\Numbers.cs" />
+    <Compile Include="Utility.cs" />
+    <Compile Include="Point.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
