added WebStorm files to .gitignore (whole folder, check comments for more.)

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,16 @@ Thumbs.db
 
 # Folder config file
 Desktop.ini
+
+############
+## WebStorm
+############
+.idea/
+# if you remove the above rule, at least ignore user-specific stuff:
+# .idea/workspace.xml
+# .idea/tasks.xml
+# and these sensitive or high-churn files:
+# .idea/dataSources.ids
+# .idea/dataSources.xml
+# .idea/sqlDataSources.xml
+# .idea/dynamic.xml
