--- a/7. High-Quality Code/Homework/11. Test Driven Development/Poker.Models/Poker.Models.csproj
+++ b/7. High-Quality Code/Homework/11. Test Driven Development/Poker.Models/Poker.Models.csproj
@@ -1,19 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{28FE6BA3-4622-406E-81C4-419B0D2368F9}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{F6FED52C-B756-4FF2-A8C2-B69AD0B6E026}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Poker</RootNamespace>
-    <AssemblyName>Poker</AssemblyName>
+    <RootNamespace>Poker.Models</RootNamespace>
+    <AssemblyName>Poker.Models</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -42,17 +40,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Card.cs" />
-    <Compile Include="CardFace.cs" />
-    <Compile Include="CardSuit.cs" />
+    <Compile Include="Enums\CardFace.cs" />
+    <Compile Include="Enums\CardSuit.cs" />
+    <Compile Include="Enums\HandType.cs" />
     <Compile Include="PokerHandsChecker.cs" />
+    <Compile Include="Utils\CardEqualityComparer.cs" />
+    <Compile Include="Utils\EnumExtension.cs" />
     <Compile Include="Hand.cs" />
-    <Compile Include="ICard.cs" />
-    <Compile Include="IHand.cs" />
-    <Compile Include="IPokerHandsChecker.cs" />
-    <Compile Include="PokerExample.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Properties\" />
+    <Compile Include="Interfaces\ICard.cs" />
+    <Compile Include="Interfaces\IHand.cs" />
+    <Compile Include="Interfaces\IPokerHandsChecker.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\InvalidPokerHandException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
