--- a/12. Data Structures & Algorithms/13. Exam Preparation/2013/Sample-Exam/03. Friends in Need/03. Friends in Need.csproj
+++ b/12. Data Structures & Algorithms/13. Exam Preparation/2013/Sample-Exam/03. Friends in Need/03. Friends in Need.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{579DACA8-DCDA-4111-92BA-2CD234640912}</ProjectGuid>
+    <ProjectGuid>{71B7F526-4406-4B22-9673-FFA17751EF14}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_05.Shopping_Center</RootNamespace>
-    <AssemblyName>_05.Shopping_Center</AssemblyName>
+    <RootNamespace>_03.Friends_in_Need</RootNamespace>
+    <AssemblyName>_03.Friends_in_Need</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,9 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PowerCollections">
-      <HintPath>..\packages\XAct.Wintellect.PowerCollections.0.0.1\lib\net20\PowerCollections.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,12 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ShoppingCenterDemo.cs" />
+    <Compile Include="Edge.cs" />
+    <Compile Include="FriendsInNeedDemo.cs" />
+    <Compile Include="Graph.cs" />
+    <Compile Include="Node.cs" />
+    <Compile Include="PriorityQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
