--- a/13. Web Services and Cloud/06. Unit Testing Services/packages/repositories.config
+++ b/13. Web Services and Cloud/06. Unit Testing Services/packages/repositories.config
@@ -4,5 +4,7 @@
   <repository path="..\BugLogger.Data\packages.config" />
   <repository path="..\BugLogger.Models\packages.config" />
   <repository path="..\BugLogger.Repositories.Tests\packages.config" />
+  <repository path="..\BugLogger.WebAPI.IntegrationTests\packages.config" />
+  <repository path="..\BugLogger.WebAPI.Tests\packages.config" />
   <repository path="..\BugLogger.WebAPI\packages.config" />
 </repositories>
