JavaScript SPA - AngularJS Lectures

--- a/11. Databases and SQL/17. Databases Team Work Project/CarsFactory/CarsFactory.ConsoleClient/App.config
+++ b/11. Databases and SQL/17. Databases Team Work Project/CarsFactory/CarsFactory.ConsoleClient/App.config
@@ -12,7 +12,7 @@
         <!--<add name="CarsFactory" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=CarsFactory;Integrated Security=True" providerName="System.Data.SqlClient" />-->
         <!--<add name="CarsFactoryMongo" connectionString="mongodb://griffin:telerik@ds063909.mongolab.com:63909/carsfactory" />-->
         <add name="CarsFactoryMongo" connectionString="mongodb://localhost" />
-        <add name="CarsFactoryDB" connectionString="server=localhost;user id=root;password=tr1u2st3;persistsecurityinfo=True;database=CarsFactoryDB" providerName="MySql.Data.MySqlClient" />
+        <add name="CarsFactoryDB" connectionString="server=localhost;user id=root;password=password;persistsecurityinfo=True;database=CarsFactoryDB" providerName="MySql.Data.MySqlClient" />
     </connectionStrings>
     <entityFramework>
         <providers>
