--- a/16. ASP.NET Web Forms/19. Exam/ExamSkeleton/ExamSkeleton.Web/Web.config
+++ b/16. ASP.NET Web Forms/19. Exam/ExamSkeleton/ExamSkeleton.Web/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -9,13 +9,12 @@
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
     <connectionStrings>
-        <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\ArticlesDb.mdf;Initial Catalog=ArticlesDb;Integrated Security=True;MultipleActiveResultSets=True"
-          providerName="System.Data.SqlClient" />
+        <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\ArticlesDb.mdf;Initial Catalog=ArticlesDb;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <system.web>
         <authentication mode="None" />
         <compilation debug="true" targetFramework="4.5" />
-        <httpRuntime targetFramework="4.5" requestValidationMode="2.0"/>
+        <httpRuntime targetFramework="4.5" requestValidationMode="2.0" />
         <pages validateRequest="false">
             <namespaces>
                 <add namespace="System.Web.Optimization" />
@@ -96,7 +95,7 @@
     <location path="Admin">
         <system.web>
             <authorization>
-                <deny users="?"/>
+                <deny users="?" />
             </authorization>
         </system.web>
     </location>
