--- a/16. ASP.NET Web Forms/09. ASP.NET Identity/CrowdChat.Web/Web.config
+++ b/16. ASP.NET Web Forms/09. ASP.NET Identity/CrowdChat.Web/Web.config
@@ -19,8 +19,8 @@
     <system.web>
         <authentication mode="None" />
         <compilation debug="true" targetFramework="4.5" />
-        <httpRuntime targetFramework="4.5" />
-        <pages>
+        <httpRuntime targetFramework="4.5" requestValidationMode="2.0"/>
+        <pages validateRequest="false">
             <namespaces>
                 <add namespace="System.Web.Optimization" />
                 <add namespace="Microsoft.AspNet.Identity" />
