--- a/17. ASP.NET MVC/13. Exam Preparation/ASP.NET-MVC-Exam-Skeleton/Source/TelerikExamSystem.Web/Web.config
+++ b/17. ASP.NET MVC/13. Exam Preparation/ASP.NET-MVC-Exam-Skeleton/Source/TelerikExamSystem.Web/Web.config
@@ -11,7 +11,7 @@ http://go.microsoft.com/fwlink/?LinkId=301880
   <connectionStrings>
     <add name="DefaultConnection(v11.0)" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=TelerikExamSystem;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="DefaultConnection(v12.0)" connectionString="Data Source=(LocalDb)\v12.0;Initial Catalog=TelerikExamSystem;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="TelerikExamSystemDatabase" connectionString="Data Source=.\sqlexpress;Initial Catalog=TelerikExamSystem;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=TelerikExamSystem;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
