--- a/17. ASP.NET MVC/13. Exam Preparation/ASP.NET-MVC-Exam-Skeleton/Source/TelerikExamSystem.Web/TelerikExamSystem.Web.csproj
+++ b/17. ASP.NET MVC/13. Exam Preparation/ASP.NET-MVC-Exam-Skeleton/Source/TelerikExamSystem.Web/TelerikExamSystem.Web.csproj
@@ -238,7 +238,7 @@
     <Compile Include="ViewModels\Manage\ManageLoginsViewModel.cs" />
     <Compile Include="ViewModels\Manage\IndexViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\Base\BaseService.cs" />
+    <Compile Include="Infrastructure\Services\Base\BaseService.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\Manage\SetPasswordViewModel.cs" />
     <Compile Include="ViewModels\Manage\VerifyPhoneNumberViewModel.cs" />
